@@ -1,9 +1,13 @@
 # data_protection_tool
-Windows: Run the jar file
-Path to the jar file: out -> artifacts -> DataProtectionToolFinalVersion_jar
 
-To run the jar file, double click on cmd file or manually type the command from the .cmd file
+### set up
+1.  Install javafx-sdk-11.0.2 or greater
+2.  Run using this command (make appropriate changes as per javafx-sdk version".
+    For example: java --module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml -jar DataProtectionToolFinalVersion.jar
+
+3.  Path to the jar file: out -> artifacts -> DataProtectionToolFinalVersion_jar.
+4.  If you are using javafx-sdk-11.0.2 only and it is installed in path "C:\Program Files\Java\" then, to run the jar file, double click on cmd file or manually type the command from the .cmd file.
 
 Softwares:
 java version 11.0.2 or greater
-java-fx
+java-fx 11.0.2
